<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C6C6C6"
    tools:context=".ui.LoginActivity">

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="158dp"
        android:layout_marginTop="448dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="235dp"
        android:fontFamily="arial"
        android:backgroundTint="#05980B"
        android:textColor="#000000"
        android:textStyle="bold"
        android:text="@string/loginBtnText"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/registerLoginBtn"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="106dp"
        android:layout_marginTop="533dp"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="150dp"
        android:text="@string/registerText"
        android:textAlignment="center"
        android:backgroundTint="#05980B"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="153dp"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="600dp"
        android:text="@string/loginTitle"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold"
        android:fontFamily="arial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/usernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="519dp"
        android:text="@string/userLoginText"
        android:textColor="#000000"
        android:textSize="24sp"
        android:fontFamily="arial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userRUTTextBox"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="454dp"
        android:fontFamily="arial"
        android:ems="10"
        android:hint="@string/userLoginHint"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textColorHint="#5A5A5A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="294dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="405dp"
        android:text="@string/passwordText"
        android:fontFamily="arial"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passLoginTextBox"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="339dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="339dp"
        android:ems="10"
        android:hint="@string/passHint"
        android:textColorHint="#5A5A5A"
        android:fontFamily="arial"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>