<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C6C6C6"
    tools:context=".ui.MainActivity">

    <include
        android:id="@+id/include"
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/CalendarBTN"
        android:layout_width="365dp"
        android:layout_height="50dp"
        android:backgroundTint="#05980B"
        android:fontFamily="arial"
        android:text="@string/calendar_button"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapView"
        app:layout_constraintVertical_bias="0.119" />

    <TextView
        android:id="@+id/calendarText"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="12dp"
        android:fontFamily="arial"
        android:text="@string/searchPageText"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:layout_constraintVertical_bias="0.011" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="400dp"
        android:layout_height="345dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarText"
        app:layout_constraintVertical_bias="0.072" />

    <Button
        android:id="@+id/rutaBtn"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="#05980B"
        android:fontFamily="arial"
        android:text="@string/cachureo"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/CalendarBTN"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/escombrosBtn"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="9dp"
        android:backgroundTint="#05980B"
        android:fontFamily="arial"
        android:text="@string/solicitudEscombros"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CalendarBTN"
        app:layout_constraintVertical_bias="0.023" />

</androidx.constraintlayout.widget.ConstraintLayout>