<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C6C6C6"
    tools:context=".ui.CachureoActivity">

    <include
        android:id="@+id/include"
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/rutaMap"
        android:layout_width="400dp"
        android:layout_height="345dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rutaTxt"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/rutaTxt"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="27dp"
        android:fontFamily="arial"
        android:text="@string/rutaCachureo"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:layout_constraintVertical_bias="0.0" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="404dp"
        android:layout_height="150dp"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="4dp"
        android:isScrollContainer="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rutaMap"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#4CAF50"
            android:padding="5dp">

            <TextView
                android:width="133dp"
                android:height="25dp"
                android:fontFamily="arial"
                android:text="@string/sectorText"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:width="133dp"
                android:height="25dp"
                android:fontFamily="arial"
                android:text="@string/rutaTxt"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:width="133dp"
                android:height="25dp"
                android:fontFamily="arial"
                android:text="@string/horarioText"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <TextView
                android:id="@+id/sectorTxtBox"
                android:width="133dp"
                android:fontFamily="arial"
                android:text=""
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/rutaTxtBox"
                android:width="133dp"
                android:fontFamily="arial"
                android:text=""
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/horarioTxtBox"
                android:width="133dp"
                android:fontFamily="arial"
                android:text=""
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>